--- a/Optimus Tech/index.html
+++ b/Optimus Tech/index.html
@@ -29,6 +29,7 @@
     </header>
     
     <main>
+
         <div class="sobre">
             <p class="sobre_nos">Sobre nós</p>
             <h1 class="sobre_titulo">Por que somos diferentes?</h1>
@@ -36,6 +37,33 @@
                 a se concentrarem naquilo que é realmente importante para elas.
             </p>
         </div>
+
+        <section class="metricas">
+            <div class="projeto_concluidos">
+                <h1 class="projetos_concluidos_titulo">400+</h1>
+                <p class="projetos_concluidos_subtitulo">Projetos Conluídos</p>
+                <p class="projetos_concluidos_paragrafos">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+            </div>
+            <div class="colaboradores">
+                <h1 class="colaboradores_titulo">100+</h1>
+                <p class="colaboradores_subtitulo">Colaboradores</p>
+                <p class="colaboradores_paragrafos">Temos mais de 100 colaboradores no nosso time que se preocupam 
+                    com nossos clientes.
+                </p>
+            </div>
+            <div class="downloads">
+                <h1 class="downloads_titulo">20k</h1>
+                <p class="downloads_subtitulo">Downloads</p>
+                <p class="downloads_paragrafo">Nossos projetos que estão disponíveis em lojas já foram baixados
+                    mais de 20.000 vezes.
+                </p>
+            </div>
+            <div class="review">
+                <h1 class="review_titulo">500+</h1>
+                <p class="review_subtitulo">Reviews 5 estrelas</p>
+                <p class="review_paragrafo">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
