--- a/Optimus Tech/index.html
+++ b/Optimus Tech/index.html
@@ -64,6 +64,17 @@
                 <p class="review_paragrafo">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
             </div>
         </section>
+
+        <section class="talentos">
+            <div>
+                <p class="tag">Vagas Abertas!</p>
+                <h1 class="talentos-titulo">Estamos procurando por talentos</h1>
+                <p class="talentos-paragrafo">Somo uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+            </div>
+            <div>
+                <img class="reuniao" src="Images/reuniao.png" alt="Foto de pessoas sorridente sentadas em uma mesa de reunião">
+            </div>
+        </section>
     </main>
 </body>
 </html>
