--- a/Optimus Tech/index.html
+++ b/Optimus Tech/index.html
@@ -74,7 +74,54 @@
             <div>
                 <img class="reuniao" src="Images/reuniao.png" alt="Foto de pessoas sorridente sentadas em uma mesa de reunião">
             </div>
+
+            <div class="vagas">
+                <h4 class="vagas-titulo">Design</h4>
+                <div class="vagas-card">
+                    <span class="vagas-cards-titulo">Product Designer</span>
+                    <div class="vagas-cards-descricao">
+                        <span class="vagas-cards-texto">Full-Time</span>
+                        <span class="vagas-cards-texto">Faixa salarial: R$7.000</span>
+                    </div>
+                </div>
+
+                <div class="vagas-card">
+                    <span class="vagas-cards-titulo">UX Designer</span>
+                    <div class="vagas-cards-descricao">
+                        <span class="vagas-cards-texto">Full-Time</span>
+                        <span class="vagas-cards-texto">Faixa salarial: R$6.000</span>
+                    </div>
+                </div>
+
+                <h4 class="vagas-titulo">Desenvolvimento de Software</h4>
+                <div class="vagas-card">
+                    <span class="vagas-cards-titulo">Desenvolverdor(a) IOS</span>
+                    <div class="vagas-cards-descricao">
+                        <span class="vagas-cards-texto">Full-Time</span>
+                        <span class="vagas-cards-texto">Faixa salarial: R$8.000</span>
+                    </div>
+                </div>
+
+                <div class="vagas-card">
+                    <span class="vagas-cards-titulo">Desenvolverdor(a) Front-end</span>
+                    <div class="vagas-cards-descricao">
+                        <span class="vagas-cards-texto">Full-Time</span>
+                        <span class="vagas-cards-texto">Faixa salarial: R$7.000</span>
+                    </div>
+                </div>
+
+                <div class="vagas-card">
+                    <span class="vagas-cards-titulo">Desenvolverdor(a) Back-end</span>
+                    <div class="vagas-cards-descricao">
+                        <span class="vagas-cards-texto">Full-Time</span>
+                        <span class="vagas-cards-texto">Faixa salarial: R$8.000</span>
+                    </div>
+                </div>
+
+            </div>
         </section>
+
+        
     </main>
 </body>
 </html>
