--- a/Optimus Tech/index.html
+++ b/Optimus Tech/index.html
@@ -117,9 +117,23 @@
                         <span class="vagas-cards-texto">Faixa salarial: R$8.000</span>
                     </div>
                 </div>
-
             </div>
         </section>
+
+        <section class="depoimentos">
+            <div class="depoimentos-texto">
+                <p class="depoimentos-paragrafo">Veja o que nossos colaboradores falam sobre nós</p>
+                <h1 class="depoimentos-titulo">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo
+                    de auxílio possível.
+                </h1>
+            </div>
+            <div class="dpoimentos-imagem">
+                <img class="perfil" src="Images/Avatar.png" alt="Foto de perfil de uma colaboradora">
+                <p class="depoimentos-imagem-nome">Júlia Castro</p>
+                <p class="depoimentos-imagem-cargo">Desenvolvedora Web</p>
+            </div>
+        </section>
+
 
         
     </main>
