--- a/Optimus Tech/index.html
+++ b/Optimus Tech/index.html
@@ -132,10 +132,18 @@
                 <p class="depoimentos-imagem-nome">Júlia Castro</p>
                 <p class="depoimentos-imagem-cargo">Desenvolvedora Web</p>
             </div>
-        </section>
-
-
-        
+        </section>     
     </main>
+    <footer class="rodape">
+        <div class="rodape-container">
+            <h1 class="rodape-titulo">Acompanhe as nossas oportunidades</h1>
+            <p class="rodape-paragrafo">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+        </div>
+       <div class="formulario">
+        <input class="email" type="email" name="email" placeholder="Seu e-mail" id="email">
+        <button class="botao" type="submit">Cadastrar</button>
+       </div>
+       <p class="copyright">© 2022 OptimusTech. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
